correct json format, diffs still missing

--- a/package.json
+++ b/package.json
@@ -32,22 +32,26 @@
   "browser": "dist/am_inspector.umd.js",
   "dependencies": {
     "@types/mocha": "^5.2.6",
+    "@types/node": "^11.13.5",
     "@types/socket.io-client": "^1.4.32",
     "assert": "^1.4.1",
     "asyncmachine": "^3.4.0",
-    "await-semaphore": "latest",
+    "await-semaphore": "^0.1.3",
+    "debug": "^4.1.1",
     "deep-copy": "^1.4.1",
     "delay": "^2.0.0",
     "eventemitter3": "^3.1.0",
     "hex-rgb": "^2.0.0",
     "idb-keyval": "^2.3.0",
+    "performance-now": "^2.1.0",
     "radians-degrees": "^1.0.0",
+    "redis": "^2.8.0",
     "simple-random-id": "^1.0.1",
     "socket.io": "^1.4.8",
     "socket.io-client": "^1.7.4",
     "underscore": "^1.8.3",
     "uuid": "^3.1.0",
-    "workerpool": "^2.3.0"
+    "workerpool": "^3.1.2"
   },
   "devDependencies": {
     "acorn": "^4.0.3",
@@ -61,14 +65,14 @@
     "del": "^2.0.2",
     "download-as-file": "^1.1.0",
     "dts-bundle": "^0.7.3",
-    "jointjs": "^2.0.1",
+    "jointjs": "^2.2.1",
     "json-loader": "^0.5.4",
     "jsondiffpatch": "^0.3.10",
     "keymaster": "^1.6.2",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.11",
     "material-ui": "^0.17.4",
     "md5": "^2.2.1",
-    "mocha": "^6.1.2",
+    "mocha": "^6.1.3",
     "moment": "latest",
     "random-number": "0.0.7",
     "raw-loader": "^0.5.1",
