quit the pool highest index benchmarks

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/mocha": "^5.2.6",
     "@types/node": "^11.13.5",
     "@types/socket.io-client": "^1.4.32",
+    "@types/workerpool": "^2.3.0",
     "assert": "^1.4.1",
     "asyncmachine": "^3.4.0",
     "await-semaphore": "^0.1.3",
